# oxytest

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  SUMMARY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
benches/: bench_discovery.rs  bench_types.rs
benchmarks/: bench_suite.py  generate.py
docs/en/: api-reference.md  benchmarks.md  contributing.md  getting-started.md  index.md  migration.md  usage.md
docs/es/: api-reference.md  benchmarks.md  contributing.md  getting-started.md  index.md  migration.md  usage.md
python/oxytest/: __init__.py  __main__.py  _assert.py  _compat.py  _config.py  _core.pyi  _cov.py  _doctest.py  _fixtures.py  _migrate.py  _plugin.py  _pool.py  _vscode.py
src/: discovery.rs  lib.rs  runner.rs  types.rs
tests/: test_args.py  test_assert.py  test_compat.py  test_config.py  test_cov.py  test_discovery.py  test_discovery_integration.py  test_doctest.py  test_execution.py  test_filter.py  test_fixtures.py  test_integration.py  test_migrate.py  test_parametrize.py  test_plugin.py  test_runner.py  test_stress.py  test_vscode.py
tests/sample_tests/: conftest.py  test_async.py  test_class.py  test_failures.py  test_fixtures.py  test_param.py  test_simple.py  test_with_doctests.py
