[package]
name = "oxytest-core"
version = "2.0.0"
edition = "2021"
description = "Oxytest Rust core - fast pytest-compatible test runner"
license = "MIT"
authors = ["Ricardo Robles Fernández <ricardo.r.f@hotmail.com>"]

[lib]
name = "oxytest_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
rayon = "1.10"
walkdir = "2.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
