[project]
name = "oxytest"
version = "3.0.0"
description = "A 100% pytest-compatible test runner written in Python + Rust, optimized for speed"
readme = "README.md"
authors = [
    { name = "Ricardo Robles Fernández", email = "ricardo.r.f@hotmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["pluggy>=1.6,<2"]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-static-i18n",
    "pymdown-extensions",
]
test = [
    "pytest",
]
lint = [
    "ruff",
    "ty",
]
cov = [
    "coverage",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "oxytest._core"

[project.scripts]
oxytest = "oxytest:main"

[project.urls]
Documentation = "https://rroblf01.github.io/oxytest/"
Repository = "https://github.com/rroblf01/oxytest"
